--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,18 +11,16 @@ nav { background-color:  rgb(75, 74, 74);}
         
         .portada  {
           /*  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/ba1.jpg);*/
-           
-          /*background-size: ;*/
-           /* opacity: black 5;*/
+            background-size: ;
+            opacity: black 5;
             height: 700px;
             color: white; font-weight: 400;    
         }
 
-        .portada .container-flex { background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(/images/ba1.jpg);
-            
-          width: 100%;
+        .portada .container-flex { background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/ba1.jpg);
+            width: 100%;
             height: 150%;
-            margin: 0 ;    /*background-size: ;*/
+            margin: 0 ;    background-size: ;
             display: flex;
             justify-content: end;
             padding-top: 25%; padding-right: 180px;
@@ -330,132 +328,3 @@ background-color: #1f4c68;
       }
 
     }
-
-
-
-
-
-
-      .tickets .container_div {
-        width: 90%;
-        max-width: 800px;
-        margin: 0 auto;
-      }
-      
-      .categorias {
-        display: flex;
-        justify-content: space-evenly;
-        margin: -7px;
-        margin-top: 7px;
-      }
-      
-      .categorias .estudiante,
-      .trainee,
-      .junior {
-        width: 30%;
-        min-width: 180px;
-        text-align: center;
-        padding: 20px; 
-        margin: 10px 10px;        
-      }
-      
-      
-      .categorias h3 {
-        font-size: 1.2rem;
-        font-weight: 600;
-      }
-      
-      .categorias h5 {
-        font-size: 16px; 
-        color: grey; 
-      }
-      
-      .categorias h6 {
-        font-size: 14px; 
-        color: grey; 
-      }
-      
-      .categorias .estudiante {
-        border-radius: 1px;
-        border: 2px solid blue;
-      }
-      
-      
-      .categorias .trainee {
-        border-radius: 1px;
-        border: 2px solid green;
-      }
-      
-      .categorias .junior {
-        border-radius: 1px;
-        border: 2px solid orange;
-      }
-      
-      
-      .container_div .textoVenta {
-        text-align: center;
-      }
-      
-      .tickets-form {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-      }
-      
-      .tickets-form .t_nombre,
-      .t_apellido {
-        width: 49%;
-        margin: 0.5rem 0;
-        border-radius: 3px;
-        border: solid gray 1px;
-        padding: 6px;
-      }
-      
-      .tickets-form .t_Email {
-        width: 100%;
-        border-radius: 3px;
-        border: solid gray 1px;
-        padding: 6px;
-      }
-      
-      .tickets-form .label1,
-      .label12 {
-        width: 49%;
-        margin: 0.5rem 0;
-      }
-      
-      .tickets-form .t_canti,
-      .clas_categ {
-        width: 100%;
-        border-radius: 3px;
-        border: solid gray 1px;
-        padding: 6px;
-      }
-      
-      .tickets-form .clas_categ {
-        background-color: transparent;
-        color: var(--gray-600);
-      }
-      
-      
-      .tickets-form .Otp {
-        width: 100%;
-        background-color:  rgb(155, 200, 222);
-        border-radius: 3px;
-        border: none;
-        padding: 13px;
-        color: var(--gray-900);
-        margin: 20px 0px;
-      }
-      
-     
-      .tickets-form .botonT {
-        width: 49%;
-        background-color: rgba(114, 209, 26, 0.8);
-        color: white;
-        margin: 20px 0px; 
-        padding: 0.5rem 1rem;
-        border-radius: 3px;
-        border: none;
-      }
-
